--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ProjectM</string>
+    <string name="web_client_id">890646187294-5cfk1qhekr62aqgc2vctv20k20j91fmi.apps.googleusercontent.com</string>
 </resources>
